--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -27,5 +27,18 @@
         </div>
     </div>
 
+    <table th:fragment="job-table" class="job-listing">
+        <tr th:each="job : ${jobs}">
+            <td>
+                <p th:text="${'ID: ' + job.Id}"></p>
+                <p th:text="${'Name: ' + job.name}"></p>
+                <p th:text="${'Employer: ' + job.employer}"></p>
+                <p th:text="${'Location: ' + job.location}"></p>
+                <p th:text="${'Position: ' + job.positionType}"></p>
+                <p th:text="${'Skills: ' + job.coreCompetency}"></p>
+            </td>
+        </tr>
+    </table>
+
 </body>
 </html>
