--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -18,9 +18,14 @@
                 </th:block>
             </tr>
             <tr>
-                <!-- TODO #2: Complete the View Jobs By Category Table. -->
 
-                <td></td> <!-- Feel free to remove or modify this element if necessary. -->
+                <td>
+                    <ul>
+                        <li>
+                            <a th:href="@{/list/jobs(column=${'all'},value=${'View All'})}" th:text="${'View All'}"></a>
+                        </li>
+                    </ul>
+                </td> <!-- Feel free to remove or modify this element if necessary. -->
 
                 <td th:each="category : ${tableChoices}">
                     <ul>
